# diffside

./: Cargo.toml  README.md  file1.txt  file2.txt
src/: diff.rs  main.rs  theme.rs  utils.rs
